added validation and changed views

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,25 +6,23 @@
 
     <div class="invalid-feedback" layout:fragment="validation-errors">
         <ul>
-            <li th:each="error : ${#object}" th:text="${error.getMessage()}"></li>
+            <li th:if="${error}" th:each="error : ${#object}" th:text="${error.getMessage()}"></li>
         </ul>
     </div>
 
     <section layout:fragment="content">
-
         <div class="p-5">
             <form action="/" method="POST" class="p-3 mb-2 border rounded bg-light">
                 <legend>Бесплатный СЕО анализ страницы вашего сайта </legend>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Запустите проверку страницы. Как роботы видят вашу страницу?</label>
-                    <input class="form-control" type="text" name="url" th:classappend="${errors.url}? 'is-invalid'" th:value="*{url.getName()}">
+                    <label for="exampleInputEmail1" class="form-label">Запустите проверку страницы! Как роботы видят вашу страницу?</label>
+                    <input class="form-control" type="text" name="url" placeholder="https://www.example.com" th:classappend="${errors.url}? 'is-invalid'" th:value="*{url.getName()}">
                         <div layout:fragment="validation-errors" th:object="${errors.url}"></div>
-                        <div id="emailHelp" class="form-text">Вставьте URL для запуска СЕО анализа</div>
+                        <div id="emailHelp" class="form-text">Вставьте URL для запуска СЕО анализа.</div>
                 </div>
                 <button type="submit" class="btn btn-primary">Отправить на проверку!</button>
             </form>
         </div>
-
     </section>
 
 </html>
