--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -36,7 +36,7 @@
 
                 <div>
                     <form th:action="*{url.getId() + '/checks'}" method="POST">
-                        <button type="submit" class="btn btn-primary">Запустить анализ!</button>
+                        <button style="background-color: rgb(98, 170, 187)" type="submit" class="btn text-white">Запустить анализ!</button>
                     </form>
                 </div>
 
