--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <div class="d-flex align-items-center justify-content-center vh-100 bg-primary">
+        <div class="d-flex align-items-center justify-content-center vh-100" style="background-color: rgb(98, 170, 187)">
             <h1 class="display-1 fw-bold text-white">404</h1>
         </div>
         <div>
