--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 
         <div class="p-5">
             <h1 style="color: rgb(98, 170, 187) ">Анализатор сайтов</h1>
-            <form style="padding: 25px !important;" action="/" method="POST" class="p-3 mb-2 border rounded bg-light">
+            <form style="padding: 25px !important;" action="/urls" method="POST" class="p-3 mb-2 border rounded bg-light">
 
                 <div style="display: flex; justify-content: start; align-items: center;">
                     <div>
